--- a/style.css
+++ b/style.css
@@ -3,7 +3,7 @@
   --ginger: #FF9900;
   --gray: #4F4F4F;
   --background: #E5E5E5;
-  --header: #2E2E2E;
+  --menu: #2E2E2E;
   --white: white;
 }
 html, body{
@@ -19,6 +19,17 @@ a {
   text-decoration: none;
   color: black;
 }
+a:hover {
+  text-decoration: underline;
+}
+h1, h2, h3, h4, h5, h6 {
+  margin: 0;
+}
+ul {
+  list-style-type: none;
+  margin: 0;
+  padding: 0;
+}
 .wrapper {
   min-height: 100%;
 }
@@ -27,19 +38,29 @@ a {
   margin: 0 auto;
 }
 .header {
-  background: var(--header);
+  background: var(--menu);
   
 }
 .header__container {
   display: flex;
   align-items: center;
   justify-content: space-between;
-  height: 131px;
+  padding: 43px 0;
+  margin-bottom: 61px;
 }
 .download-pdf__link {
   font-size: 21px;
   color: var(--ginger);
 }
+.download-pdf__link:hover {
+  text-decoration: none;
+}
+.download-pdf__link:hover .download-pdf__text {
+  text-decoration: underline;
+}
+
+
+
 .username {
   font-size: 36px;
   color: var(--white);
@@ -62,6 +83,101 @@ a {
 .info {
   display: flex;
 }
+.info__skills {
+  margin-bottom: 55px;
+}
+.info__left {
+  margin-right: 45px;
+}
+.info__right {
+  margin-top: 13px;
+}
+img {
+  display: block;
+  max-width: 100%;
+}
+.avatar {
+  border-radius: 10px;
+  overflow: hidden;
+  width: 500px;
+  height: 554px;
+}
+.avatar__img {
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+}
+.info__title {
+  font-size: 36px;
+  margin-bottom: 37px;
+}
+.tech__sub-item {
+  font-size: 16px;
+  position: relative;
+  margin-left: 15px;
+}
+.tech__sub-item:before {
+  content: "";
+  position: absolute;
+  top: 10px;
+  left: -10px;
+  display: block;
+  width: 6px;
+  height: 6px;
+  border-radius: 50%;
+  background: var(--ginger);
+}
+.tech__title {
+  font-size: 24px;
+  margin-bottom: 6px;
+}
+.tech__sub-list {
+  margin-bottom: 13px;
+}
 
+/* desc */
+.desc__list {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-between;
+}
+.desc__item {
+  width: calc(100%/2 - (34px/2));
+  margin-bottom: 40px;
+  
+}
+.desc__title {
+  margin-bottom: 23px;
+}
+/* footer */
+.footer {
+  background: var(--menu);
+  
+}
+.footer__container {
+  padding: 46px 0;
+  display: flex;
+  justify-content: space-between;
+}
 
+.icons__list {
 
+  display: flex;
+  
+}
+
+.icons__link {
+  display: flex;
+  width: 38px;
+  height: 38px;
+  background: white;
+  margin-right: 10px;
+  justify-content: center;
+  align-items: center;
+  font-size: 20px;
+  
+}
+.icons__link:hover {
+  opacity: 0.8;
+  text-decoration: none;
+}
