--- a/style.css
+++ b/style.css
@@ -34,7 +34,8 @@ ul {
   min-height: 100%;
 }
 .container {
-  width: 1200px;
+  max-width: 1200px;
+  width: 95%;
   margin: 0 auto;
 }
 .header {
@@ -45,7 +46,7 @@ ul {
   display: flex;
   align-items: center;
   justify-content: space-between;
-  padding: 43px 0;
+  padding: 40px 0;
   margin-bottom: 61px;
 }
 .download-pdf__link {
@@ -58,7 +59,9 @@ ul {
 .download-pdf__link:hover .download-pdf__text {
   text-decoration: underline;
 }
-
+.download-pdf__text {
+  margin-left: 6px;
+}
 
 
 .username {
@@ -84,13 +87,13 @@ ul {
   display: flex;
 }
 .info__skills {
-  margin-bottom: 55px;
+  margin-bottom: 67px;
 }
 .info__left {
   margin-right: 45px;
 }
 .info__right {
-  margin-top: 13px;
+  margin-top: 23px;
 }
 img {
   display: block;
@@ -109,7 +112,7 @@ img {
 }
 .info__title {
   font-size: 36px;
-  margin-bottom: 37px;
+  margin-bottom: 57px;
 }
 .tech__sub-item {
   font-size: 16px;
@@ -132,10 +135,15 @@ img {
   margin-bottom: 6px;
 }
 .tech__sub-list {
-  margin-bottom: 13px;
+  
+  margin-bottom: 31px;
+
 }
 
 /* desc */
+.desc__container {
+  margin-bottom: 12px;
+}
 .desc__list {
   display: flex;
   flex-wrap: wrap;
@@ -143,11 +151,13 @@ img {
 }
 .desc__item {
   width: calc(100%/2 - (34px/2));
-  margin-bottom: 40px;
+  
+  margin-bottom: 49px;
+
   
 }
 .desc__title {
-  margin-bottom: 23px;
+  margin-bottom: 28px;
 }
 /* footer */
 .footer {
@@ -155,11 +165,13 @@ img {
   
 }
 .footer__container {
-  padding: 46px 0;
+  padding: 45px 0;
   display: flex;
   justify-content: space-between;
 }
-
+.download-pdf__footer {
+  margin-top: 7px;
+}
 .icons__list {
 
   display: flex;
@@ -171,10 +183,10 @@ img {
   width: 38px;
   height: 38px;
   background: white;
-  margin-right: 10px;
+  margin-left: 10px;
   justify-content: center;
   align-items: center;
-  font-size: 20px;
+  font-size: 28px;
   
 }
 .icons__link:hover {
